APIs/microsoft.com/cognitiveservices-Prediction/2.0/javascript-client/README.md
# custom_vision_prediction_client

CustomVisionPredictionClient - JavaScript client for custom_vision_prediction_client
No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0
- Package version: 2.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install custom_vision_prediction_client --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your custom_vision_prediction_client from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CustomVisionPredictionClient = require('custom_vision_prediction_client');


var api = new CustomVisionPredictionClient.ImagePredictionApiApi()
var projectId = "64b822c5-8082-4b36-a426-27225f4aa18c"; // {String} The project id
var predictionKey = "{API Key}"; // {String} 
var imageData = "/path/to/file"; // {File} 
var opts = {
  'iterationId': "fe1e83c4-6f50-4899-9544-6bb08cf0e15a", // {String} Optional. Specifies the id of a particular iteration to evaluate against.              The default iteration for the project will be used when not specified
  'application': "application_example" // {String} Optional. Specifies the name of application using the endpoint
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.predictImage(projectId, predictionKey, imageData, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://southcentralus.api.cognitive.microsoft.com/customvision/v2.0/Prediction*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CustomVisionPredictionClient.ImagePredictionApiApi* | [**predictImage**](docs/ImagePredictionApiApi.md#predictImage) | **POST** /{projectId}/image | Predict an image and saves the result
*CustomVisionPredictionClient.ImagePredictionApiApi* | [**predictImageUrl**](docs/ImagePredictionApiApi.md#predictImageUrl) | **POST** /{projectId}/url | Predict an image url and saves the result
*CustomVisionPredictionClient.ImagePredictionApiApi* | [**predictImageUrlWithNoStore**](docs/ImagePredictionApiApi.md#predictImageUrlWithNoStore) | **POST** /{projectId}/url/nostore | Predict an image url without saving the result
*CustomVisionPredictionClient.ImagePredictionApiApi* | [**predictImageWithNoStore**](docs/ImagePredictionApiApi.md#predictImageWithNoStore) | **POST** /{projectId}/image/nostore | Predict an image without saving the result


## Documentation for Models

 - [CustomVisionPredictionClient.BoundingBox](docs/BoundingBox.md)
 - [CustomVisionPredictionClient.ImagePrediction](docs/ImagePrediction.md)
 - [CustomVisionPredictionClient.ImageUrl](docs/ImageUrl.md)
 - [CustomVisionPredictionClient.Prediction](docs/Prediction.md)


## Documentation for Authorization

Endpoints do not require authorization.

